# evrimsel-hesaplama

./: .gitignore  Makefile  README.md  compare_selection.py  visualize.py
arena/backend/: .dockerignore  .gitignore  Dockerfile  alembic.ini  pyproject.toml
arena/backend/alembic/: env.py
arena/backend/alembic/versions/: 0001_initial_schema.py
arena/backend/arena_core/: api.py  app.py  build_network.py  container_runner.py  contract.py  db.py  docker_cli.py  ids.py  judge0_runner.py  local_runner.py  models.py  presets.py  problem.py  run_spec.py  runner.py  scorer.py  server.py  service.py  validator.py  workdir.py  worker.py
arena/backend/docker/: build-presets.sh
arena/backend/docker/presets/go/: Dockerfile
arena/backend/docker/presets/java/: Dockerfile  entrypoint.sh
arena/backend/docker/presets/node/: Dockerfile
arena/backend/docker/presets/python/: Dockerfile
arena/backend/docker/presets/rust/: Dockerfile
arena/backend/docker/proxy/: Dockerfile  squid.conf
arena/backend/tests/: conftest.py  test_api.py  test_app_entrypoint.py  test_build_network.py  test_container_runner.py  test_contract.py  test_db.py  test_docker_cli.py  test_ids.py  test_judge0_runner.py  test_local_runner.py  test_models.py  test_presets.py  test_problem.py  test_run_spec.py  test_runner.py  test_runner_scorer_integration.py  test_scorer.py  test_server.py  test_service.py  test_smoke.py  test_validator.py  test_workdir.py  test_worker.py
arena/backend/tests/integration/: test_build_proxy.py  test_container_integration.py  test_migration.py  test_templates.py
(+69 files in other folders)
