[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "arena-core"
version = "0.1.0"
description = "TSP Solver Arena scoring core + backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115",
    "sqlalchemy>=2.0",
    "rq>=1.16",
    "redis>=5",
    "httpx>=0.27",
]

[project.optional-dependencies]
dev = ["pytest>=8", "fakeredis>=2.21", "uvicorn[standard]>=0.30"]
prod = ["psycopg[binary]>=3.1", "uvicorn[standard]>=0.30", "alembic>=1.13"]

[tool.setuptools]
packages = ["arena_core"]

[tool.setuptools.package-data]
arena_core = ["data/*.txt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "docker: requires a running Docker daemon and the built arena/* images",
]
